# Autonomous-Agents

./: .gitignore  APoolable.cpp  APoolable.h  AShootingStrategy.cpp  AShootingStrategy.h  Asteroid.cpp  Asteroid.h  AsteroidsSFML.sln  AsteroidsSFML.vcxproj  AsteroidsSFML.vcxproj.filters  AutoShoot_SuspendedState.cpp  AutoShoot_SuspendedState.h  AutoShoot_WaitAndShootState.cpp  Background.cpp  Background.h  BaseVehicle.cpp  BaseVehicle.h  Base_WaitState.cpp  Base_WaitState.h  Bot.cpp  BuildAndRun.bat  BuildAndRun.command  Bullet.cpp  Bullet.h  CMakeLists.txt  Collider.cpp  Collider.h  Component.cpp  Component.h  Debug.cpp  Debug.h  Edge.cpp  Edge.h  EnemyShip.cpp  EnemyShip.h  Enemy_ChaseState.cpp  Enemy_ChaseState.h  Enemy_RevolveState.cpp  Enemy_RevolveState.h  Event.h  (+55 more)
Source/: Asteroid.cpp  Asteroid.h  Background.cpp  Background.h  CMakeLists.txt  GameHUD.cpp
Source/Core/: CMakeLists.txt  Maths.cpp  Maths.h  MultiTriShape.h  ScreenShaker.cpp  Timer.cpp  Timer.h  TimerManager.cpp
Source/Graph/: CMakeLists.txt  Edge.h  Graph.h  Node.h  TransitionEdge.cpp  TransitionEdge.h
Source/ParticleSystem/: AParticleShape.cpp  BakedParticleShape.cpp  CMakeLists.txt  LogicalParticleShape.cpp  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemManager.cpp  ParticleSystemManager.h
Source/Portal/: CMakeLists.txt  Portal.cpp  Portal.h  Portal_ReadyState.cpp  Portal_ReadyState.h  Portal_WaitState.cpp  Portal_WaitState.h
Source/Ships/: AShootingStrategy.h  AutoShoot_SuspendedState.h  AutoShoot_WaitAndShootState.cpp  AutoShoot_WaitAndShootState.h  BaseVehicle.cpp  BaseVehicle.h  Base_WaitState.h  Bot.cpp  Bot.h  Bullet.cpp  Bullet.h  CMakeLists.txt  EnemyShip.cpp  EnemyShip.h  Enemy_ChaseState.cpp  Enemy_ChaseState.h  Enemy_RevolveState.cpp  Enemy_RevolveState.h  PlayerShip.h  (+3 more)
(+178 files in other folders)
